@@ -1,3 +1,8 @@
+2004-06-09  Chad Fowler  <chad@chadfowler.com>
+	* lib/rubygems/remote_install.rb: delegate search functionality to Cache class, bringing remote and local search and list together into one piece of code.
+        * bin/gem, lib/rubygems/validator.rb: move all STDIO work to bin/gem.  Validator.alien now returns a hash of ErrorData objects.
+        * bin/gem, lib/rubygems/installer.rb: move most of the STDIO stuff to bin/gem, communicating via exceptions in this case.
+
 2004-06-08  Rich Kilmer  <rich@infoether.com>
         * Fixed the drive problem on win32 (hopefully) so multiple drives
           should now work.  Its still a hack until rdoc is fixed.
